--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@
   }
   
   body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'specify-personal-normal-black', sans-serif;
     background: url("../img/pocetna.png");
     background-size:cover;
     background-repeat: no-repeat;
+    
     
   }
   
@@ -46,7 +47,23 @@ form button {
     margin-top: 1rem;
 }
 
+ul li {
+  font-size: 2.5rem;
+  list-style: none;
+}
 
+#slova {
+  display: flex;
+  flex-direction: row;
+}
 
-  
+.kupujem {
+  margin-top: -0.8rem;
+}
 
+nav{
+  width: 4rem;
+  position: relative;
+  left: 4rem;
+  top:1.5rem;
+}
